<resources>
    <string name="app_name">ReGeX</string>

    <string name="match">Match</string>
    <string name="dmactch">Don\'t Match</string>
    <string name="regex">regex</string>
    <string name="title_activity_game">@string/app_name</string>
    <string name="solved">Solved with:</string>
    <string name="lvlup">Level up:</string>
    <string name="new_game">Now playing: </string>

    <string name="status">Status</string>
    <string name="round">Round</string>
    <!-- formerly "difficulty" -->
    <string name="diff">Level</string>
    <string name="score">Score</string>

    <string name="settings">Settings and Actions</string>
    <string name="clear">Reset game</string>
    <string name="confirm">Press to confirm</string>
    <string name="char_on">Turn char-bar on</string>
    <string name="char_off">Turn char-bar off</string>
    <string name="notif_on">Turn notifications on</string>
    <string name="notif_off">Turn notifications off</string>
    <string name="mode">Set game mode</string>

    <string name="footer">ReGeX by @phikal, v1.2</string>

    <string name="title_activity_settings">@string/settings</string>

    <string name="start">Start</string>
    <string name="source">Source</string>
    <string name="help">Help</string>
    <string name="show_new">New</string>
    <string name="whats_newh">What\'s New</string>

    <string name="hello">ReGeX /ˈrɛːɡɛx/ is an android game, with a simple objective: Find a
        regular expression which does match certain strings, but doesn\'t match others.\n\n

        Depending on how long the expression is, how many regex characters you used and a few
        more variables, your score is generated. From the number of game and your score (high
        score and less games), the current level is calculated. The higher the level, the more
        complex the challenges become. There is no last or final level - it just goes on forever
        growing square-root-like.\n\n

        Below I have added a link to a cheat-sheet on regular expression, for those unfamiliar
        with the syntax.\n\n

        ---\n\n

        This app is free software (Licence: GPLv2+), and hosted on GitHub. If you want a new
        feature or found a bug, please submit a issue. Pull requests are also gladly appreciated.
    </string>

    <string name="random_game">Random Game</string>
    <string name="random_about">The random game mode will generate random strings, without any
        special meaning for you to solve. The game mode can be played offline, and loads quickly.</string>
    <string name="random_error">This shouldn\'t be happening&#8230;</string>

    <string name="redb_game">REDB Game</string>
    <string name="redb_about">The REDB game mode will get it\'s tasks from a REDB server, and let you
    contribute to it\'s solution database if allowed. This will require a working internet connection,
    and may task slightly longer to load, but the tasks are probably better or more challenging.</string>
    <string name="redb_error">Error requesting next task from server. Please change game mode.</string>

    <string name="rword_game">Random Word Game</string>
    <string name="rword_about">This game is based on the Random Game, but instead of using Random
    character sequences, it generates the tasks from a dictionary file. Just like RG, it can
    be played while offline.</string>

    <string-array name="game_modes">
        <item>@string/random_game</item>
        <item>@string/redb_game</item>
        <item>@string/rword_game</item>
    </string-array>

    <string name="config">Configuration</string>

    <string name="no_config">No configuration options</string>

    <string name="url">REDB server URL</string>
    <string name="contrib_on">Turn contribution on</string>
    <string name="contrib_off">Turn contribution off</string>
    <string name="info_contrib">Sending solutions anonymously to the REDB server</string>

    <string name="url_error">Invalid URL</string>
    <string name="conn_error">Can\'t connect</string>
    <string name="reset">reset</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
