<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_comment"
    tools:context="com.phikal.regex.Activitys.Settings.MainSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Header"
            android:text="@string/status" />

        <LinearLayout style="@style/OptionItem">

            <TextView
                style="@style/OptionName"
                android:text="@string/round" />

            <TextView
                android:id="@+id/round"
                style="@style/OptionValue" />

        </LinearLayout>


        <LinearLayout style="@style/OptionItem">

            <TextView
                style="@style/OptionName"
                android:text="@string/score" />

            <TextView
                android:id="@+id/score"
                style="@style/OptionValue" />

        </LinearLayout>

        <LinearLayout style="@style/OptionItem">

            <TextView
                style="@style/OptionName"
                android:text="@string/diff" />

            <TextView
                android:id="@+id/diff"
                style="@style/OptionValue" />

        </LinearLayout>

        <TextView
            style="@style/Header"
            android:text="@string/settings" />

        <LinearLayout style="@style/OptionItem">

            <Button
                android:id="@+id/clear"
                style="@style/OptionButton"
                android:text="@string/clear" />

        </LinearLayout>

        <LinearLayout style="@style/OptionItem">

            <Button
                android:id="@+id/charm"
                style="@style/OptionButton" />

        </LinearLayout>

        <LinearLayout style="@style/OptionItem">

            <Button
                android:id="@+id/notif"
                style="@style/OptionButton" />

        </LinearLayout>


        <LinearLayout style="@style/OptionItem">

            <Button
                android:id="@+id/mode"
                style="@style/OptionButton"
                android:nestedScrollingEnabled="false"
                android:text="@string/mode" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/modesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/padding"
            android:visibility="gone">

            <Button
                android:id="@+id/random"
                style="@style/OptionButton"
                android:layout_width="match_parent"
                android:text="@string/random_game"
                android:textStyle="normal" />

            <Button
                android:id="@+id/redb"
                style="@style/OptionButton"
                android:layout_width="match_parent"
                android:text="@string/redb_game"
                android:textStyle="normal" />

        </LinearLayout>

        <Button
            android:id="@+id/footer"
            style="@style/Header"
            android:text="@string/footer"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
